your commit message

--- a/my-first-git-push.Rmd
+++ b/my-first-git-push.Rmd
@@ -47,7 +47,7 @@ veränderung
 
 
 ```{r}
-veränderung2 <- "das ist eine weitere Veränderung"
-veränderung2
+veränderung_2 <- "das ist eine weitere Veränderung"
+veränderung_2
 ```
 
