your commit message

--- a/my-first-git-push.Rmd
+++ b/my-first-git-push.Rmd
@@ -51,3 +51,8 @@ veränderung_2 <- "das ist eine weitere Veränderung"
 veränderung_2
 ```
 
+
+```{r}
+veränderung_3 <- "das ist eine weitere Veränderung"
+veränderung_3
+```
